# tree-sitter-elle

./: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  binding.gyp  generic.le  go.mod  grammar.js  hashmap.le  package.json  pyproject.toml  setup.py  test.le  tree-sitter.json
bindings/c/: tree-sitter-elle.pc.in
bindings/c/tree_sitter/: tree-sitter-elle.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_elle/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterElleTests/: TreeSitterElleTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
